[gd_scene load_steps=5 format=3 uid="uid://dbaqm321odlwp"]

[ext_resource type="Script" path="res://scripts/dodge.gd" id="1_dqv42"]

[sub_resource type="Gradient" id="Gradient_5gusc"]
offsets = PackedFloat32Array(0, 0.45082, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.83, 0.9915, 1, 0.54902, 0.26, 0.568333, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_einff"]
gradient = SubResource("Gradient_5gusc")
width = 16

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xqfad"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_einff")

[node name="DodgeEffect" type="Node2D"]
script = ExtResource("1_dqv42")

[node name="DashGhost" type="GPUParticles2D" parent="."]
position = Vector2(0, -16)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_xqfad")
lifetime = 0.2
one_shot = true
explosiveness = 0.25
interpolate = false
fract_delta = false

[node name="FreeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="FreeTimer" to="." method="_on_free_timer_timeout"]
